bug fix: text not aligned in answer box

--- a/index.css
+++ b/index.css
@@ -5,27 +5,29 @@
 .con {
     width: 600px;
     height: 40%;
-    background-color: red;
+    background-color: #C0C0C0;
     padding: 10px;
 }
 
 .answer {
-  width: 60px;
+  width: 100px;
   height: 40px;
   background-color: #00FFFF;
   border-radius: 40px;
   border: solid;
+  text-align: center;
   border-width: 5px;
   border-color: #C0C0C0;
   float: left;
 }
 
 .answer-2 {
-  width: 60px;
+  width: 100px;
   height: 40px;
   background-color: #00FFFF;
   border-radius: 40px;
   border: solid;
+  text-align: center;
   border-width: 5px;
   border-color: #C0C0C0;
   float:right;
